src/mon/MonClient.cc
@@ -310,10 +310,10 @@ bool MonClient::ms_dispatch(Message *m)
   return true;
 }
 
-void MonClient::send_log()
+void MonClient::send_log(bool flush)
 {
   if (log_client) {
-    Message *lm = log_client->get_mon_log_message();
+    Message *lm = log_client->get_mon_log_message(flush);
     if (lm)
       _send_mon_message(lm);
     more_log_pending = log_client->are_pending();
@@ -539,13 +539,9 @@ void MonClient::handle_auth(MAuthReply *m)
 	_send_mon_message(waiting_for_session.front());
 	waiting_for_session.pop_front();
       }
-
       _resend_mon_commands();
 
-      if (log_client) {
-	log_client->reset_session();
-	send_log();
-      }
+      send_log(true);
       if (session_established_context) {
         cb = session_established_context;
         session_established_context = NULL;
